Enhance Firebase integration and user profile management
- Update Firebase options to use environment variables for sensitive data
- Improve error handling during Firebase initialization
- Refactor user profile fetching to handle Firestore availability issues
- Add profile drawer for user display name and role management
- Update dashboards to utilize user profiles correctly
- Introduce loading states and error handling in dashboard views
- Add sample Firebase configuration file
- Update .gitignore to exclude local Firebase configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Local Firebase configuration files
+config/firebase_options.*.json
+!config/firebase_options.sample.json
