feat: add image upload functionality for profile and product images
- Updated README.md to include information about image uploads and required iOS permissions.
- Added `image_picker` dependency for selecting images from the gallery.
- Implemented `StorageService` for handling image uploads to Firebase Storage.
- Modified user and product models to include `photoUrl` and `imageUrl` fields.
- Enhanced sign-up and farmer dashboard pages to allow users to upload profile and product images.
- Updated `AuthService` to handle user location and photo URL updates.
- Added image upload functionality in the profile drawer and farmer dashboard.
- Introduced a placeholder for product images when not available.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -65,5 +65,9 @@
 		<string>com.google.sso</string>
 		<string>com.googleusercontent.apps.676110780293-cc4ol8nu0nqn50842uf2eic7acmqlk64</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow KrishiConnect to access your photo library to upload profile and product images.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow KrishiConnect to capture photos for your profile and inventory.</string>
 </dict>
 </plist>
