--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_sign_in: ^6.2.1
   provider: ^6.1.2
   flutter_screenutil: ^5.9.0
+  image_picker: ^1.0.7
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
